# xfce-panel-plugin-hello

./: Readme.md  install.sh  main.vala  meson.build  readme.md  uninstall.sh
src/: GreetingService.vala  Main.vala  XfcePanelPluginHello.vala  meson.build  xfce4-panel-plugin-hello.desktop.in
test/: GreetingServiceTest.vala  meson.build
vapi/: libxfce4panel-2.0.vapi
